--- a/web-app/rest-api/template/books.html
+++ b/web-app/rest-api/template/books.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
+<title>Books in my private library</title>
 
-</body>
-</html>
+<h1>List of books</h1>
+
+{% for b in books %}
+    <h2> Title - {{b.title}},    Author -  {{b.firstName}} {{b.lastName}} </h2>
+ {%endfor%}
+ {% endblock content %}
