--- a/web-app/rest-api/templates/layout.html
+++ b/web-app/rest-api/templates/layout.html
@@ -20,14 +20,14 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Flask Blog</a>
+          <a class="navbar-brand mr-4" href="/">Library</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="/">Home</a>
-              <a class="nav-item nav-link" href="/about">About</a>
+              <a class="nav-item nav-link" href="/book">Collection</a>
+              <a class="nav-item nav-link" href="/capture">Capture</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -48,10 +48,10 @@
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+                <li class="list-group-item list-group-item-light">Top 100</li>
+                <li class="list-group-item list-group-item-light">Opinion</li>
+                <li class="list-group-item list-group-item-light">Q^A</li>
+                <li class="list-group-item list-group-item-light">Documentation</li>
               </ul>
             </p>
           </div>
