--- a/web-app/rest-api/templates/layout.html
+++ b/web-app/rest-api/templates/layout.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     {% if title %}
-        <title>Library of StBanas - {{ title }}</title>
+        <title>Library- {{ title }}</title>
     {% else %}
         <title>Book collection</title>
     {% endif %}
@@ -27,7 +27,8 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="/book">Collection</a>
-              <a class="nav-item nav-link" href="/capture">Capture</a>
+                <a class="nav-item nav-link" href="/book">Add book</a>
+<!--              <a class="nav-item nav-link" href="/capture">Capture</a>-->
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
