improve runner app and layouts - book form working

--- a/web-app/rest-api/templates/books.html
+++ b/web-app/rest-api/templates/books.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <title>Library</title>
-<h1>Choose an option</h1>
+<h1>Insert data </h1>
 <div class="content-section">
   <form  method="POST" action="">
        <fieldset class="form-group">
