--- a/web-app/rest-api/templates/layout.html
+++ b/web-app/rest-api/templates/layout.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     {% if title %}
-        <title>Library- {{ title }}</title>
+        <title>Library{{ title }}</title>
     {% else %}
-        <title>Book collection</title>
+        <title>Null</title>
     {% endif %}
 </head>
 <body>
