add dbase.db to gitignore

--- a/web-app/rest-api/templates/layout.html
+++ b/web-app/rest-api/templates/layout.html
@@ -13,7 +13,7 @@
     {% if title %}
         <title>Library- {{ title }}</title>
     {% else %}
-        <title>Book collection</title>
+        <title>Home Page</title>
     {% endif %}
 </head>
 <body>
