add few new endpoints and navigation changes

--- a/web-app/rest-api/templates/books.html
+++ b/web-app/rest-api/templates/books.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <title>Library</title>
-<h1>Choose an option</h1>
+<h2> Enter new book data </h2>
 <div class="content-section">
   <form  method="POST" action="">
        <fieldset class="form-group">
@@ -32,5 +32,4 @@
 
   </form>
 </div>
-
  {% endblock content %}
