--- a/web-app/rest-api/templates/role.html
+++ b/web-app/rest-api/templates/role.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<title> Home Page</title>
+<title> Role </title>
 <div class="content-section">
- <h2> Home Page - Welcome to my library</h2>
+ <h2> You are new </h2>
 </div>
 {% endblock %}
