--- a/web-app/rest-api/templates/layout.html
+++ b/web-app/rest-api/templates/layout.html
@@ -9,12 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-
-    {% if title %}
-        <title>Library- {{ title }}</title>
-    {% else %}
-        <title>Home Page</title>
-    {% endif %}
+    <title>Library - {{ title }}</title>
 </head>
 <body>
     <header class="site-header">
@@ -26,8 +21,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="/book">Collection</a>
-                <a class="nav-item nav-link" href="/book">Add book</a>
+              <a class="nav-item nav-link" href="/book/modify">Modify</a>
+                <a class="nav-item nav-link" href="/book/list">List</a>
 <!--              <a class="nav-item nav-link" href="/capture">Capture</a>-->
             </div>
             <!-- Navbar Right Side -->
@@ -42,20 +37,11 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
-          {% block content %}{% endblock %}
+          {% block content %}
+            <h1>some content</h1>
+          {% endblock %}
         </div>
         <div class="col-md-4">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Top 100</li>
-                <li class="list-group-item list-group-item-light">Opinion</li>
-                <li class="list-group-item list-group-item-light">Q^A</li>
-                <li class="list-group-item list-group-item-light">Documentation</li>
-              </ul>
-            </p>
-          </div>
         </div>
       </div>
     </main>
