--- a/web-app/rest-api/templates/books.html
+++ b/web-app/rest-api/templates/books.html
@@ -3,6 +3,7 @@
 {% block content %}
 <title>Library</title>
 <h2> Enter new book data </h2>
+
 <div class="content-section">
   <form  method="POST" action="">
        <fieldset class="form-group">
@@ -20,7 +21,7 @@
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                Done? <a class="ml-2" href="{{ url_for('login') }}"> Return </a>
+                Done? <a class="ml-2" href="{{ url_for('index') }}"> Return </a>
                 </small>
             </div>
 
