--- a/web-app/rest-api/templates/modifyMode.html
+++ b/web-app/rest-api/templates/modifyMode.html
@@ -1,33 +1,27 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<title>Modify</title>
-<h2>Choose an option</h2>
+<title>Mode</title>
+<h2>Choose mode</h2>
 <div class="content-section">
              <div class="form-group">
                  </div>
 
             <div class="border-top pt-3">
                 <small class="text-muted">
-                Done? <a class="ml-2" href="{{ url_for('createBook') }}"> Add </a>
+                Done? <a class="ml-2" href="{{ url_for('createBook') }}"> Manual </a>
                 </small>
             </div>
 
             <div class="border-top pt-3">
                 <small class="text-muted">
-                <a class="ml-2" href="{{ url_for('modify_add_capture') }}"> Change </a>
+                Done? <a class="ml-2" href="{{ url_for('modify_add_capture') }}"> Capture </a>
                 </small>
             </div>
 
             <div class="border-top pt-3">
                 <small class="text-muted">
-                <a class="ml-2" href="{{ url_for('delete_book', book_id=1) }}"> Delete </a>
-                </small>
-            </div>
-
-            <div class="border-top pt-3">
-                <small class="text-muted">
-                <a class="ml-2" href="{{ url_for('login')}}"> Return </a>
+                Done? <a class="ml-2" href="{{ url_for('index') }}"> Return </a>
                 </small>
             </div>
 </div>
