--- a/web-app/rest-api/templates/books.html
+++ b/web-app/rest-api/templates/books.html
@@ -21,7 +21,7 @@
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                Done? <a class="ml-2" href="{{ url_for('index') }}"> Return </a>
+                <a class="ml-2" href="{{ url_for('index') }}"> Return </a>
                 </small>
             </div>
 
