--- a/web-app/rest-api/templates/import.html
+++ b/web-app/rest-api/templates/import.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<title> Capture</title>
+<title> Import_CSV</title>
 <div class="content-section">
-     <h2> Capture insertion</h2>
+ <h2> CSV insertion</h2>
     <br/>
  <h3> sorry - page under construction</h3>
 </div>
