--- a/web-app/rest-api/templates/modify.html
+++ b/web-app/rest-api/templates/modify.html
@@ -10,7 +10,7 @@
 
             <div class="border-top pt-3">
                 <a class="text-muted">
-               <a class="ml-2" href="{{ url_for('createBook') }}"> Add / Remove by Hand </a>
+               <a class="ml-2" href="{{ url_for('create_book') }}"> Add / Remove by Hand </a>
                 </a>
             </div>
 
@@ -21,13 +21,13 @@
 
             <div class="border-top pt-3">
                 <a class="text-muted">
-                <a class="ml-2" href="{{ url_for('createBook_NPL') }}"> Insert by NPL   </a>
+                <a class="ml-2" href="{{ url_for('create_book_NLP') }}"> Insert by NLP   </a>
                 </a>
             </div>
 
             <div class="border-top pt-3">
                 <a class="text-muted">
-                <a class="ml-2" href="{{ url_for('createBook_CSV') }}"> Import as CSV   </a>
+                <a class="ml-2" href="{{ url_for('create_book_CSV') }}"> Import as CSV   </a>
                 </a>
             </div>
 
