--- a/web-app/rest-api/templates/modifyMode.html
+++ b/web-app/rest-api/templates/modifyMode.html
@@ -9,7 +9,7 @@
 
             <div class="border-top pt-3">
                 <small class="text-muted">
-                Done? <a class="ml-2" href="{{ url_for('createBook') }}"> Manual </a>
+                Done? <a class="ml-2" href="{{ url_for('create_book') }}"> Manual </a>
                 </small>
             </div>
 
@@ -21,7 +21,7 @@
 
             <div class="border-top pt-3">
                 <small class="text-muted">
-                Done? <a class="ml-2" href="{{ url_for('index') }}"> Return </a>
+                Done? <a class="ml-2" href="{{ url_for('index') }}"> Return to Home Paqge</a>
                 </small>
             </div>
 </div>
