--- a/web-app/rest-api/templates/speek.html
+++ b/web-app/rest-api/templates/speek.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<title> NPL</title>
+<title> NLP </title>
 <div class="content-section">
     <h2> NLP insertion</h2>
     <br/>
