--- a/web-app/rest-api/templates/update.html
+++ b/web-app/rest-api/templates/update.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <title>Library</title>
-<h3> Enter new book data </h3>
+<h2> Update the book data </h2>
 
 <div class="content-section">
   <form  method="POST" action="">
@@ -33,4 +33,4 @@
 
   </form>
 </div>
- {% endblock content %}
+ {% endblock content %}>
