--- a/web-app/rest-api/templates/bookList.html
+++ b/web-app/rest-api/templates/bookList.html
@@ -1,5 +1,7 @@
+
 {% extends "layout.html" %}
 {% block content %}
+<h4>Enter new book</h4>
 <tbody>
             {{ form.hidden_tag() }}
             <tr>
@@ -21,14 +23,14 @@
 
     <table>
 
-        <thead>
-            <tr>
-                <th>Enter new book </th>
-            </tr>
+<!--        <thead>-->
+<!--            <tr>-->
+<!--                <th>Enter new book </th>-->
+<!--            </tr>-->
 
 
 
-        </thead>
+<!--        </thead>-->
 
         <tbody>
             {{ form.hidden_tag() }}
@@ -79,6 +81,8 @@
         <td>{{book.author}}</td>
         <td>{{book.title}}</td>
         <td><a href="{{ url_for('delete_book', book_id=book.id) }}">delete</a></td>
+        <div> <br/></div>
+        <td><a href="{{ url_for('update_book', book_id=book.id) }}">update</a></td>
     </tr>
 {% endfor %}
 </table>
