add update -commit use as migration to other system (unit == Ubuntu +)

--- a/web-app/rest-api/templates/books.html
+++ b/web-app/rest-api/templates/books.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<title>Library</title>
+<title>Add</title>
 <h3> Enter new book data </h3>
 
 <div class="content-section">
