--- a/web-app/rest-api/templates/update.html
+++ b/web-app/rest-api/templates/update.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<title>Library</title>
+<title>Update</title>
 <h2> Update the book data </h2>
 
 <div class="content-section">
@@ -24,13 +24,8 @@
                 <a class="ml-2" href="{{ url_for('create_book') }}"> Return </a>
                 </small>
             </div>
-
-
         </legend>
-
-
        </fieldset>
-
   </form>
 </div>
  {% endblock content %}>
