add modify/mode endpoint & multichoice options for add funcionality

--- a/web-app/rest-api/templates/bookList.html
+++ b/web-app/rest-api/templates/bookList.html
@@ -10,8 +10,8 @@
                 </td>
 
                 <td>
-                    {{ form.author1 }}
-                    {% for error in form.author1.errors %}
+                    {{ form.ocr_text }}
+                    {% for error in form.ocr_text.errors %}
                         <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </td>
