--- a/web-app/rest-api/templates/layout.html
+++ b/web-app/rest-api/templates/layout.html
@@ -21,7 +21,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="/book/modify">Modify</a>
+              <a class="nav-item nav-link" href="/book/modify/add">Modify</a>
                 <a class="nav-item nav-link" href="/book/list">List</a>
 <!--              <a class="nav-item nav-link" href="/capture">Capture</a>-->
             </div>
