--- a/web-app/rest-api/templates/modify.html
+++ b/web-app/rest-api/templates/modify.html
@@ -10,7 +10,12 @@
 
             <div class="border-top pt-3">
                 <a class="text-muted">
-               <a class="ml-2" href="{{ url_for('create_book') }}"> Add / Remove by Hand </a>
+               <a class="ml-2" href="{{ url_for('modify_mode') }}">Add</a>
+                </a>
+            </div>
+    <div class="border-top pt-3">
+                <a class="text-muted">
+               <a class="ml-2" href="{{ url_for('create_book') }}">Delete/Update</a>
                 </a>
             </div>
 
