--- a/web-app/rest-api/templates/update.html
+++ b/web-app/rest-api/templates/update.html
@@ -2,30 +2,55 @@
 
 {% block content %}
 <title>Update</title>
-<h2> Update the book data </h2>
+<h4> Update the book data </h4>
 
-<div class="content-section">
-  <form  method="POST" action="">
-       <fieldset class="form-group">
-        <legend class="border-bottom mb-4">
-         <div class="form-group">
-          {{form.author.label(class="form-control-label") }}
-          {{form.author(class="form-control form-control-lg") }}
-         </div>
-        <div class="form-group">
-      {{form.title.label(class="form-control-label") }}
-      {{form.title(class="form-control form-control-lg") }}
-     </div>
-             <div class="form-group">
-                {{ form.submit (class="btn btn-outline-info") }}
-            </div>
-            <div class="border-top pt-3">
-                <small class="text-muted">
-                <a class="ml-2" href="{{ url_for('create_book') }}"> Return </a>
-                </small>
-            </div>
-        </legend>
-       </fieldset>
-  </form>
-</div>
- {% endblock content %}>
+<form action="" method="POST">
+
+        <tbody>
+            {{ form.hidden_tag() }}
+            <tr>
+                <td>
+                    {{ form.author.label }}
+                </td>
+                <td>
+                    {{ form.author }}
+                    {% for error in form.author.errors %}
+                        <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </td>
+                <td>
+                    {{ form.title.label }}
+                </td>
+                <td>
+                    {{ form.title }}
+                    {% for error in form.title.errors %}
+                        <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </td>
+            </tr>
+        </tbody>
+
+        <tfoot>
+            <tr>
+                <th>
+                    {{ form.submit() }}
+                </th>
+            </tr>
+        </tfoot>
+
+</form>
+
+<h1>The textarea element</h1>
+
+<form action="/action_page.php">
+<label for="w3review">Review of W3Schools:</label>
+<textarea id="w3review" name="w3review" rows="4" cols="50">
+  At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
+  </textarea>
+  <br><br>
+  <input type="submit" value="Submit">
+</form>
+
+<p>Click the "Submit" button and the form-data will be sent to a page on the
+server called "action_page.php".</p>
+{% endblock content %}
