--- a/web-app/rest-api/templates/createBooksManualy.html
+++ b/web-app/rest-api/templates/createBooksManualy.html
@@ -21,7 +21,7 @@
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                <a class="ml-2" href="{{ url_for('create_book') }}"> Return </a>
+                <a class="ml-2" href="{{ url_for('create_book_manualy') }}"> Return </a>
                 </small>
             </div>
 
