--- a/web-app/rest-api/templates/layout.html
+++ b/web-app/rest-api/templates/layout.html
@@ -21,8 +21,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="/book/modify/add">Modify</a>
-                <a class="nav-item nav-link" href="/book/list">List</a>
+              <a class="nav-item nav-link" href="/book/list">List</a>
+                <a class="nav-item nav-link" href="/book/modify/add/mode">Add</a>
+                    <a class="nav-item nav-link" href="/book/modify/add">Modify</a>
 <!--              <a class="nav-item nav-link" href="/capture">Capture</a>-->
             </div>
             <!-- Navbar Right Side -->
