--- a/web-app/rest-api/static/main.css
+++ b/web-app/rest-api/static/main.css
@@ -75,6 +75,10 @@ a.article-title:hover {
   margin-bottom: 16px;
 }
 
+.fit-picture {
+    width: 250px;
+}
+
 .account-heading {
   font-size: 2.5rem;
 }
