--- a/web-app/rest-api/templates/modify.html
+++ b/web-app/rest-api/templates/modify.html
@@ -3,43 +3,18 @@
 {% block content %}
 <title>Modify</title>
 
-<h3>Choose an option</h3>
+<h3>Modify book's data</h3>
 <div class="content-section">
-             <div class="form-group">
+            <div class="form-group">
                  </div>
-
             <div class="border-top pt-3">
                 <a class="text-muted">
-               <a class="ml-2" href="{{ url_for('modify_mode') }}">Add</a>
+               <a class="ml-2" href="{{ url_for('create_book_manualy') }}">Delete/Update</a>
                 </a>
-            </div>
-    <div class="border-top pt-3">
-                <a class="text-muted">
-               <a class="ml-2" href="{{ url_for('create_book') }}">Delete/Update</a>
-                </a>
-            </div>
-
-            <div class="border-top pt-3">
-                <a class="text-muted">
-                <a class="ml-2" href="{{ url_for('modify_add_capture') }}"> Take Photo</a>
-                </a>
-
-            <div class="border-top pt-3">
-                <a class="text-muted">
-                <a class="ml-2" href="{{ url_for('create_book_NLP') }}"> Insert by NLP   </a>
-                </a>
-            </div>
-
-            <div class="border-top pt-3">
-                <a class="text-muted">
-                <a class="ml-2" href="{{ url_for('create_book_CSV') }}"> Import as CSV   </a>
-                </a>
-            </div>
-
             </div>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                <a class="ml-2" href="{{ url_for('index')}}"> Return to Home Page</a>
+                <a class="ml-2" href="{{ url_for('index')}}"> Return </a>
                 </small>
             </div>
 </div>
